--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,8 @@
     "autoprefixer": "^10.4.13",
     "jest": "^29.4.2",
     "postcss": "^8.4.21",
+    "prettier": "^2.8.4",
+    "prettier-plugin-tailwindcss": "^0.2.3",
     "tailwindcss": "^3.2.6",
     "vite": "^4.1.0"
   }
